--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 body{
     padding:0;
     margin:0;
-    font-family: helvetica,
-    sans-serif;
 }
 
 nav{
@@ -24,48 +22,32 @@ nav a:hover{
     text-decoration: underline;
 }
 
-main{
-maring:20px auto;
-display: flex;
-flex-wrap: wrap;
-}
-
-  }
-.flexItem{
-    flex-basis: 300px;
-    flex-grow: 2;
-    margin: 2px;
-    background: yellow;
-    padding: 30px;
-}
-
-main{
+.flexbox{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
 }
-main{
+.flexItem{
     flex-basis: 300px;
     flex-grow: 2;
     margin: 2px;
 }
-
+/* .grow{
+    flex-grow: ;
+} */
 img{
     width: 100%;
-    display: block;
-    margin: 1% auto;
-    border: 0;
 }
 @media screen and (min-width: 700px) {
-
-        img{
-          display: inline;
-          width: 30%;
+        .flexItem{
+            height:400px;
+            object-fit: cover;
         }
 }
-
-@media screen and (min-width: 1300px) {
-    img{
-
-    }
+/* Bottom img gets too big after 1600px */
+@media screen and (min-width: 1600px) {
+        .flexItem{
+            flex-basis: 30%;
+            height:400px;
+        }
 }
