--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
 body{
+    background-color: #CDA2D5;
     padding:0;
     margin:0;
+    font-family: helvetica, sans-serif;
+}
+
+.logo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:60%;
+  max-width: 350px;
 }
 
 nav{
     background: grey;
     /* height: 60px; */
     text-align: center;
+    font-family: Georgia, serif;
 }
 
 nav a{
@@ -22,32 +33,54 @@ nav a:hover{
     text-decoration: underline;
 }
 
-.flexbox{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+/* Styles for hero or features */
+.hero{
+  background-image: image(hair.jpg);
+  height: 600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  position: relative;
 }
+.hero h2{
+  position: absolute;
+  bottom: :10%;
+  right: 5%;
+}
+
+
+main{
+maring:20px auto;
+display: flex;
+flex-wrap: wrap;
+}
+
 .flexItem{
     flex-basis: 300px;
     flex-grow: 2;
     margin: 2px;
+    background: yellow;
+    padding: 30px;
 }
-/* .grow{
-    flex-grow: ;
-} */
+
 img{
     width: 100%;
+    display: block;
+    margin: 1% auto;
+    border: 0;
 }
 @media screen and (min-width: 700px) {
-        .flexItem{
-            height:400px;
-            object-fit: cover;
+        .logo{
+          /* width:200px */
+        }
+        img{
+          display: inline;
+          width: 30%;
         }
 }
-/* Bottom img gets too big after 1600px */
-@media screen and (min-width: 1600px) {
-        .flexItem{
-            flex-basis: 30%;
-            height:400px;
-        }
+
+@media screen and (min-width: 1300px) {
+    img{
+
+    }
 }
